--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <script type="text/javascript">
     // API endpoint
-    const apiEndpoint = 'https://api.quotable.io/random';
+    const apiEndpoint = 'https://cors-anywhere.herokuapp.com/https://api.quotable.io/random';
 
     // Fetch data from the API
     fetch(apiEndpoint)
