--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
     <style>
         body {
             font-family: 'Rubik Doodle Shadow', sans-serif;
+            background-image: linear-gradient(to right top, #5A6469, #566573, #5A6469, #5A6469, #566573);
         }
         #wrapper {
-            height: 100vh;
+            height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: linear-gradient(to right top, #5A6469, #566573, #5A6469, #5A6469, #566573);
+           
         }
 
         .card {
             max-width: 500px;
             max-height: auto;
+            margin-bottom: 30px;
         }
 
         .subtitle {
