--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         body {
             font-family: 'Rubik Doodle Shadow', sans-serif;
             background-image: linear-gradient(to right top, #5A6469, #566573, #5A6469, #5A6469, #566573);
+            height: auto;
         }
         #wrapper {
             height: auto;
