--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         body {
             font-family: 'Rubik Doodle Shadow', sans-serif;
             background-image: linear-gradient(to right top, #5A6469, #566573, #5A6469, #5A6469, #566573);
-            height: auto;
+            height: 120vh;
         }
         #wrapper {
             height: auto;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: start;
            
         }
 
