--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Suiscata Random Quotes">
     <meta property="og:description" content="Get inspired by random quotes from Suiscata">
     <meta property="og:image" content="suis.jpg">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:url" content="https://technobytedev.github.io/suiscata">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#5A6469">
     <!-- Add other necessary meta tags -->
