--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <footer class="card-footer">
             <p class="card-footer-item">
                 <span class="">
-                <a class="has-text-white"onclick="shareOnFacebook()"><img src="fb.png" alt="" style="max-width: 20px;margin-bottom:-4px!important"> Share on Facebook </a>
+                <a class="has-text-white"onclick="shareOnFacebook()"><img src="fb.png" alt="" style="max-width: 20px;margin-bottom:-4px!important"> Share on FB </a>
                 </span>
             </p>
             <p class="card-footer-item">
