--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">SUISCATA RANDOM QUOTES</title>
-    <meta property="og:title" content="Suiscata Random Quotes">
-    <meta property="og:description" content="Get inspired by random quotes from Suiscata">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
 <!--     <meta property="og:image" content="suis.jpg"> -->
     <meta property="og:url" content="https://technobytedev.github.io/suiscata">
     <meta property="og:type" content="website">
